# promtrix

./: .gitignore  pyproject.toml
app/: config.py  evaluate.py  repository.py  task_execution.py
app/domain/: entities.py
app/entities_models/: base.py  db_models.py  entities.py
app/features/execution_persistence/: models.py
app/features/task_execution/data/: repositories.py
app/features/task_execution/domain/: repositories.py
app/presentation/components/: base_component.py  prompt_template_component.py  prompt_template_variables_component.py  set_prompt_templates.py
app/shared/: utils.py
experiments/: README.md
experiments/bbh/: bbh.py
experiments/multilingual_prompt/: README.md
